--- a/Strange/index.html
+++ b/Strange/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- Change the favicon to swimsuit SVG -->
-    <link rel="icon" type="image/svg+xml" sizes="" href="/path/to/swimsuit-svgrepo-com.svg" />
+    <link rel="icon" type="image/svg+xml" href="/masked-icon.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#1a0632" />
+    <meta name="description" content="A modern chat application for connecting with strangers" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+    <meta name="apple-mobile-web-app-title" content="Stranger" />
+    <meta name="msapplication-TileColor" content="#1a0632" />
+    <meta name="msapplication-config" content="/browserconfig.xml" />
     <title>Stranger</title>
   </head>
   <body>
